# packages/vaccine-app/server/api/controllers/examples/router.ts
@@ -3,7 +3,6 @@ import controller from './controller'
 export default express.Router()
 
     .post('/vaccinerecords/', controller.vaccine_createRecord)
-    .post('/vaccinedetails/', controller.vaccine_createDetail)
     .get('/familys/:id', controller.vaccine_getFamilyById)
     .get('/hospitals/:id', controller.vaccine_getHospitalById)
     .get('/insurances/:id', controller.vaccine_getInsuranceById)
@@ -11,6 +10,7 @@ export default express.Router()
     .get('/doctors/:id', controller.vaccine_getDocById)
     .get('/physicians/:id', controller.vaccine_getPhysicianById)
     .post('/isAuthinticated', controller.vaccine_isAuthinticated)
+    .post('/createDetail', controller.vaccine_createDetail)
     .post('/getAllRecords', controller.vaccine_getAllRecords)
     .post('/getAllDetails', controller.vaccine_getAllDetails)
     .post('/getRecordById', controller.vaccine_getRecordById)
